feat: making some improvements to the platform

--- a/platformio.ini
+++ b/platformio.ini
@@ -5,7 +5,7 @@ include_dir =
 
 [inkplate_defaults]
 ; default enviroments for inkplate devices
-platform = espressif32
+platform = espressif32@6.9.0
 framework = arduino
 monitor_speed = 115200
 board = esp32dev
@@ -27,7 +27,7 @@ lib_deps =
   ; >1.2.3 - any version greater than 1.2.3. >=, <, and <= are also possible
   ; >0.1.0,!=0.2.0,<0.3.0 - any version greater than 0.1.0, not equal to 0.2.0 and less than 0.3.0
   
-  https://github.com/SolderedElectronics/Inkplate-Arduino-library#10.0.0
+  https://github.com/SolderedElectronics/Inkplate-Arduino-library#10.2.2
   arduino-libraries/NTPClient @ 3.2.1 ; NTP client
   fbiego/ESP32Time @ 2.0.6 ; for syncing RTC to internal clock
   jchristensen/Timezone @ 1.2.4 ; for timezone and DST calculations
