fix: changed the default pio run workflow

--- a/platformio.ini
+++ b/platformio.ini
@@ -37,8 +37,8 @@ lib_deps =
 
   https://github.com/PaulStoffregen/Time @ 1.6.1 ; ? needed by Inkplate-Arduino-library
 
-; set the default target to compile, upload, and monitor
-targets = upload, monitor
+; Note: No default targets set - 'pio run' will compile only
+; For local development with device, use: 'pio run -t upload -t monitor'
 monitor_filters = time, esp32_exception_decoder, default
 
 build_flags =
